--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
       <artifactId>docker-client</artifactId>
       <version>8.16.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
   </dependencies>
 
 	<build>
