--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.65</version>
         </dependency>
+        <!-- Apache POI - import Excel file-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
