--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,12 @@
             <artifactId>parso</artifactId>
             <version>2.0.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j.procedure</groupId>
+            <artifactId>apoc</artifactId>
+            <version>4.4.0.14</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
