--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,27 @@
             <artifactId>neo4j-java-driver</artifactId>
             <version>4.4.0</version>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.neo4j.test/neo4j-harness -->
+        <dependency>
+            <groupId>org.neo4j.test</groupId>
+            <artifactId>neo4j-harness</artifactId>
+            <version>5.5.0</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-nop</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
