--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ server.port=8085
 spring.data.neo4j.database=datalake
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+# Enable HTTP/2
+server.http2.enabled=true
+# Optimize transactions
+spring.neo4j.transaction.timeout=60s
+# Optimize performance
+spring.data.neo4j.cypher.shortcuts=true
+spring.data.neo4j.repositories.fetch-depth=3
+# Set logging level to INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.neo4j.ogm=INFO
